fix button not well aligned in chrome

--- a/src/main/webapp/css/graph-main.css
+++ b/src/main/webapp/css/graph-main.css
@@ -301,7 +301,6 @@ body{
 
 .peripheral-menu.identification input.remove-type{
     padding-bottom: 10px;
-    display:block;
     margin:auto;
 }
 
